# exposeme

./: .dockerignore  .env  .env.template  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  build.rs  client.toml  docker-compose.yml  motivation.md  readme.md  requirements.md  server.toml  todo.md
.github/workflows/: cl.yml  release.yml
config/: client.toml  client.toml.template  server.toml  server.toml.template
docs/: exposeme_class_diagram.md  exposeme_mermaid_architecture.md  exposeme_mermaid_flows.md  exposeme_mermaid_network.md  exposeme_mermaid_quick_reference.md  exposeme_mermaid_sequence.md  exposeme_mermaid_state.md
examples/: sse_test_server.rs  test_server.rs
scripts/: build-and-push-with-ui.sh  build-and-push.sh  deploy-server.sh  github-login.sh  release.sh  vps.sh
src/: async_defer.rs  config.rs  insecure_cert.rs  lib.rs  logging.rs  macros.rs  observability.rs  protocol.rs  ssl.rs  streaming.rs  svc.rs  ui_assets.rs  unified_svc.rs
src/client/: connection.rs  http_handler.rs  mod.rs  utils.rs  websocket_handler.rs
src/dns/: mod.rs
src/dns/providers/: azure.rs  cloudflare.rs  digitalocean.rs  hetzner.rs  mod.rs
src/observability/: api.rs  mod.rs
src/svc/: mod.rs  servers.rs  tunnel_mgmt.rs  types.rs  utils.rs
src/svc/handlers/: acme.rs  admin.rs  api.rs  mod.rs  tunnel.rs  websocket.rs
ui/: Cargo.toml  Leptos.toml  Trunk.toml  index.html
ui/assets/: main.css
ui/src/: api.rs  dashboard.rs  lib.rs  sse.rs  types.rs
ui/src/components/: admin_auth.rs  footer.rs  header.rs  mod.rs  navigation.rs  traffic_chart.rs
ui/src/pages/: admin.rs  certificates.rs  dashboard.rs  mod.rs  settings.rs  tunnels.rs
