[package]
name = "exposeme"
version = "0.2.0"
edition = "2021"  # Changed from 2024 to 2021
authors = ["Oleg Orlov <arch7tect@gmail.com>"]
description = "Secure HTTP tunneling service"
license = "MIT"

[[bin]]
name = "exposeme-server"
path = "src/bin/server.rs"

[[bin]]
name = "exposeme-client"
path = "src/bin/client.rs"

[[example]]
name = "test_server"
path = "examples/test_server.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# WebSocket support
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# HTTP server/client - Updated for hyper 1.x
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }  # Added for hyper 1.x compatibility
http-body-util = "0.1"  # Added for body handling
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"] }

# HTTPS/TLS support
tokio-rustls = "0.26.2"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2.0"

# Let's Encrypt ACME
instant-acme = "0.7.2"
rcgen = "0.14.1"

# Configuration
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# DNS resolution
hickory-resolver = { version = "0.25.2", features = ["tokio"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22.1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
x509-parser = "0.17.0"
async-trait = "0.1.88"
tower = "0.5.2"
bytes = "1.10.1"

[dev-dependencies]
tokio-test = "0.4"