[package]
name = "exposeme"
version = "1.4.2"
edition = "2024"
authors = ["Oleg Orlov <arch7tect@gmail.com>"]
description = "Secure HTTP tunneling service"
license = "MIT"

[[bin]]
name = "exposeme-server"
path = "src/bin/server.rs"

[[bin]]
name = "exposeme-client"
path = "src/bin/client.rs"

[[example]]
name = "test_server"
path = "examples/test_server.rs"

[[example]]
name = "sse_test_server"
path = "examples/sse_test_server.rs"

[dependencies]
# Async runtime
tokio = { version = "1.47", features = ["full"] }

# WebSocket support
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# HTTP server/client
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

# HTTPS/TLS support
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2"

# Let's Encrypt ACME
instant-acme = { version = "0.8", features = ["hyper-rustls"] }
rcgen = "0.14"

# Configuration
clap = { version = "4.5", features = ["derive"] }
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# DNS resolution
hickory-resolver = { version = "0.25", features = ["tokio"] }

# Serialization
bincode = { version = "2.0", features = ["serde"] }

# Utilities
uuid = { version = "1.17", features = ["v4"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
x509-parser = "0.17"
async-trait = "0.1"
tower = "0.5"
bytes = "1.10"
sha1 = "0.10"

# Streaming support
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]