[workspace]
members = [".", "ui"]
resolver = "2"

[workspace.dependencies]
# Shared dependencies only
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[workspace.package]
version = "1.4.63"
edition = "2021"
authors = ["Oleg Orlov <arch7tect@gmail.com>"]
description = "Secure HTTP tunneling service"
license = "MIT"

[package]
name = "exposeme"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[[bin]]
name = "exposeme-server"
path = "src/bin/server.rs"

[[bin]]
name = "exposeme-client"
path = "src/bin/client.rs"

[[example]]
name = "test_server"
path = "examples/test_server.rs"

[[example]]
name = "sse_test_server"
path = "examples/sse_test_server.rs"

[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-util = "0.7"

# WebSocket support
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# HTTP server/client
hyper = { version = "1.7", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
reqwest = { version = "0.13", features = ["json", "rustls", "stream", "form"] }

# HTTPS/TLS support
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2"

# Let's Encrypt ACME
instant-acme = { version = "0.8", features = ["hyper-rustls"] }
rcgen = "0.14"

# Configuration
clap = { version = "4.5", features = ["derive"] }
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# DNS resolution
hickory-resolver = { version = "0.25", features = ["tokio"] }

# Serialization
bincode = { version = "2.0", features = ["serde"] }

# Utilities
uuid = { version = "1.18", features = ["v4"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
tracing-rolling-file = "0.1"
chrono = { version = "0.4", features = ["serde"] }
x509-parser = "0.18.0"
async-trait = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-gzip", "compression-br", "fs"] }
bytes = "1.10"
sha1 = "0.10"

# Streaming support
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# Static asset embedding
rust-embed = { version = "8.7", features = ["debug-embed", "include-exclude"] }

[features]
default = []

[[workspace.metadata.leptos]]
name = "ui"
bin-package = "exposeme-ui" 
lib-package = "exposeme-ui"
lib-features = []
bin-features = ["csr"]
lib-default-features = false
bin-default-features = false
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "assets"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
