[package]
name = "exposeme-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ExposeME Web UI"

[lib]
crate-type = ["cdylib"]

[features]
csr = ["leptos/csr"]

[dependencies]
leptos = { workspace = true }
leptos_meta = { workspace = true, features = [] }
leptos_router = { workspace = true }
wasm-bindgen = "0.2.101"
js-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
console_log = "1.0"
log = "0.4"
gloo = "0.11"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "EventSource",
  "MessageEvent", 
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Location",
]