[package]
name = "exposeme-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ExposeME Web UI"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
csr = ["leptos/csr"]

[dependencies]
# Leptos UI framework
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = "0.8"
leptos_router = "0.8"

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "EventSource",
  "MessageEvent",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Location",
] }

# WASM utilities
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
console_log = "1.0"
log = "0.4"
gloo = "0.11"

# Shared dependencies
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true